WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50462
[GTK] webkit_soup_cache_clear() does not delete all entries in the cache
https://bugs.webkit.org/show_bug.cgi?id=50462
Summary
[GTK] webkit_soup_cache_clear() does not delete all entries in the cache
Sergio Villar Senin
Reported
2010-12-03 10:19:28 PST
The problem is that we're removing entries in the callback of g_hash_table_foreach, something that is obviously wrong
Attachments
Fix for the bug
(4.29 KB, patch)
2010-12-03 10:41 PST
,
Sergio Villar Senin
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2010-12-03 10:41:15 PST
Created
attachment 75510
[details]
Fix for the bug
Martin Robinson
Comment 2
2010-12-05 15:48:04 PST
Is it possible to simply use g_hash_table_remove_all?
Sergio Villar Senin
Comment 3
2010-12-06 01:09:52 PST
(In reply to
comment #2
)
> Is it possible to simply use g_hash_table_remove_all?
Not really because it could happen that we might decide not to remove some item from the cache for example if some entry is dirty. We cannot also use g_hash_table_remove without changing the logic of webkit_soup_cache_entry_remove either.
Martin Robinson
Comment 4
2010-12-06 01:21:10 PST
Comment on
attachment 75510
[details]
Fix for the bug Yay!
Sergio Villar Senin
Comment 5
2010-12-06 01:44:01 PST
Committed
r73350
: <
http://trac.webkit.org/changeset/73350
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug