2010-12-06  Sergio Villar Senin  <svillar@igalia.com>

Reviewed by Martin Robinson.

        [GTK] webkit_soup_cache_clear() does not delete all entries in the cache
        https://bugs.webkit.org/show_bug.cgi?id=50462

        Do not use g_hash_table_foreach to remove entries from the cache
        entries hashtable. Iterate over a list of entries to remove them
        from the hash table.

        * platform/network/soup/ResourceHandleSoup.cpp:
        * platform/network/soup/cache/webkit/soup-cache.c:
        (remove_cache_item):
        (webkit_soup_cache_finalize):
        (clear_cache_item):
        (webkit_soup_cache_clear):

Canonical link: https://commits.webkit.org/63772@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73350 268f45cc-cd09-0410-ab3c-d52691b4dbfc